--- a/app/src/main/res/layout/activity_salesman_profile.xml
+++ b/app/src/main/res/layout/activity_salesman_profile.xml
@@ -572,6 +572,7 @@
     </LinearLayout>
 
 <Button
+    android:id="@+id/sale_button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Update Profile"
