--- a/app/src/main/res/layout/adapter_pending_orders.xml
+++ b/app/src/main/res/layout/adapter_pending_orders.xml
@@ -28,6 +28,7 @@
         android:orientation="vertical"
         >
     <TextView
+        android:id="@+id/itemName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Item Name"
