--- a/app/src/main/res/layout/pendingorderslayout.xml
+++ b/app/src/main/res/layout/pendingorderslayout.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/salesman_pendingItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/midgreen"
