--- a/app/src/main/res/layout/midsectionsalesmandashboard.xml
+++ b/app/src/main/res/layout/midsectionsalesmandashboard.xml
@@ -13,6 +13,8 @@
     android:orientation="horizontal"
     android:layout_height="wrap_content">
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_pendingOrder"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sd6"
@@ -76,7 +78,9 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_pendingPayments"
         android:layout_width="match_parent"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         app:cardCornerRadius="@dimen/sd16"
@@ -146,6 +150,8 @@
         android:layout_marginVertical="@dimen/sd6"
         android:layout_height="wrap_content">
         <androidx.cardview.widget.CardView
+            android:id="@+id/card_totalReturns"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/sd6"
@@ -210,6 +216,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:foreground="?android:attr/selectableItemBackground"
             android:layout_weight="1"
             app:cardCornerRadius="@dimen/sd16"
             android:id="@+id/card_moreaboutsales"
