--- a/app/src/main/res/drawable/custom_ripple.xml
+++ b/app/src/main/res/drawable/custom_ripple.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/lightgreen">
-
+    android:color="?android:attr/colorControlHighlight">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/lightgreen2" />
+            <solid android:color="@android:color/white" />
         </shape>
     </item>
-
-    <item android:id="@android:id/background">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/lightgreen3" />
+    <item>
+        <shape
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:shape="rectangle">
+            <solid android:color="@color/lightgreen" /> <!-- Replace with your desired ripple color -->
         </shape>
     </item>
-
 </ripple>
