--- a/app/src/main/res/layout/pending_payment_layout.xml
+++ b/app/src/main/res/layout/pending_payment_layout.xml
@@ -22,7 +22,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/midgreen"
@@ -31,11 +31,9 @@
                 android:textColor="@color/darkgreen"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:padding="@dimen/sd8"
-                android:src="@drawable/ic_baseline_filter_list_24" />
+            <include
+                android:id="@+id/pendingPaymentDate"
+                layout="@layout/date_filter"/>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
