--- a/app/src/main/res/layout/customerall_items_section.xml
+++ b/app/src/main/res/layout/customerall_items_section.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent">
     <LinearLayout
+        android:id="@+id/shopNowLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
