--- a/app/src/main/res/layout/return_order_layout.xml
+++ b/app/src/main/res/layout/return_order_layout.xml
@@ -32,9 +32,36 @@
 
                 android:textStyle="bold" />
 
-            <include
+
+            <LinearLayout
                 android:id="@+id/returnOrderDate"
-                layout="@layout/date_filter"/>
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/sd6"
+                android:gravity="right"
+                android:background="@color/midgreen"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="@dimen/sd20"
+                    android:layout_height="@dimen/sd20"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_baseline_calendar_month_24"
+                    />
+
+                <TextView
+                    android:id="@+id/dateFilterTextViewRO"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Sort by date"
+                    android:padding="@dimen/sd4"
+                    android:textColor="@color/darkgreen"
+                    android:textStyle="bold"
+                    />
+
+
+
+            </LinearLayout>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
