--- a/app/src/main/res/layout/activity_distributor_profile.xml
+++ b/app/src/main/res/layout/activity_distributor_profile.xml
@@ -798,7 +798,7 @@
                         android:padding="@dimen/sd8">
 
                         <ImageView
-
+                            android:id="@+id/dist_aadharIV"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:layout_marginHorizontal="@dimen/sd6"
@@ -824,6 +824,7 @@
                         android:padding="@dimen/sd8">
 
                         <ImageView
+                            android:id="@+id/dist_panIV"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
 
