Fix issue of updating inage and set profile picture for

--- a/app/src/main/res/layout/activity_salesman_profile.xml
+++ b/app/src/main/res/layout/activity_salesman_profile.xml
@@ -74,6 +74,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:id="@+id/sale_profilePic"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:src="@drawable/ic_skincare2" />
