--- a/app/src/main/res/layout/activity_distributor_profile.xml
+++ b/app/src/main/res/layout/activity_distributor_profile.xml
@@ -76,6 +76,7 @@
             </LinearLayout>
 
             <ImageView
+                android:id="@+id/dist_profilePic"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/ic_skincare2" />
